Fix check for argument length in DataEngine loader

BUG: 452596

After i wrote the initial patch, we decided that the plasma-frameworks internal code which dumped
the entire KPluginMetaData object as a variant map in the args could be removed.
However, this change was not applied to the sanity check in the latest revision of the MR.